all info displaying

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0">
     <title>SnapTrip Test Jake Adams</title>
+    <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <section class="map-container">
-      <div id="google-reviews"></div>
+      <div id="map"></div>
     </section>
     <section class="places">
       <ul class="places__list">
