styling updated and loader added

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0">
     <title>SnapTrip Test Jake Adams</title>
-    <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Karla|Playfair+Display" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <section class="map-container">
-      <div id="map"></div>
-    </section>
+    <div class="loading">
+      <div class="loading-spinner">
+        <div class="dot dotOne"></div>
+        <div class="dot dotTwo"></div>
+        <div class="dot dotThree"></div>
+      </div>
+    </div>
     <section class="places">
       <ul class="places__list">
       </ul>
