--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <div class="dot dotThree"></div>
       </div>
     </div>
+    <nav class="navigation">
+      <span class="sort">Sort By:</span>
+      <button class="distance-btn places__type">Distance</button>
+      <button class="rating-btn places__type">Rating</button>
+    </nav>
     <section class="places">
       <ul class="places__list">
       </ul>
